tests/machine/x/ocaml/sort_stable.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/sort_stable.ml", line 36, characters 27-30:
36 | let items = [[("n",1);("v","a")];[("n",1);("v","b")];[("n",2);("v","c")]]
                                ^^^
Error: This expression has type string but an expression was expected of type
         int


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let items = [[("n",1);("v","a")];[("n",1);("v","b")];[("n",2);("v","c")]]
  37 | let result = (let __res0 = ref [] in
  38 |   List.iter (fun i ->
